--- a/README
+++ b/README
@@ -17,11 +17,22 @@ The two networks trained for version 1
 train_sbafs.py --accept_sunz_min 90 --viirs_dir ~/SBAF_NN/DATA/VIIRS/ --n19_train ~/SBAF_NN/DATA/TEST/ --n19_valid ~/SBAF_NN/DATA/VALID/ -o ~/SBAF_NN/ ch_tb11 ch_tb12 ch_tb37 ch_tb85
 train_sbafs.py --accept_sunz_max 89 --accept_time_diff 1 --accept_satz_max 15 --viirs_dir ~/SBAF_NN/DATA/VIIRS/ --n19_train ~/SBAF_NN/DATA/TRAIN/ --n19_valid ~/SBAF_NN/DATA/VALID/ -o ~/SBAF_NN/ ch_r06 ch_r09 ch_tb11 ch_tb12 ch_tb37 ch_r16 ch_tb85
 
-There will be three network trained
+Three network trained for version 2:
 ----------------------------------
 train_sbafs.py --accept_sunz_min 90 --accept_satz_max 25 --train_dir ~/SBAF_NN/DATA/TRAIN/ --valid_dir ~/SBAF_NN/DATA/VALID/ -o ~/SBAF_NN/ ch_tb11 ch_tb12 ch_tb37 ch_tb85
 train_sbafs.py --accept_sunz_max 80 --accept_satz_max 25 --train_dir ~/SBAF_NN/DATA/TRAIN/ --valid_dir ~/SBAF_NN/DATA/VALID/ -o ~/SBAF_NN/ ch_r06 ch_r09 ch_tb11 ch_tb12 ch_tb37 ch_r16 ch_tb85
 train_sbafs.py --accept_sunz_max 89 --accept_sunz_min 80 --accept_satz_max 25 --train_dir ~/SBAF_NN/DATA/TRAIN/ --valid_dir ~/SBAF_NN/DATA/VALID/ -o ~/SBAF_NN/ ch_r06 ch_r09 ch_tb11 ch_tb12 ch_tb37 ch_r16 ch_tb85
+
+Three networks trained for version 3:
+----------------------------------
+train_sbafs.py --accept_sunz_max  80 --accept_time_diff 120 --accept_satz_max 15 --train_dir ~/SBAF_NN/DATA/TRAIN/ --valid_dir ~/SBAF_NN/DATA/VALID/ -o ~/SBAF_NN/ ch_r06 ch_r09 ch_tb11 ch_tb12 ch_tb37 ch_r16 ch_85
+train_sbafs.py --accept_sunz_max  80 --accept_time_diff 120 --accept_satz_max 15 --train_dir ~/SBAF_NN/DATA/TRAIN/ --valid_dir ~/SBAF_NN/DATA/VALID/ -o ~/SBAF_NN/ ch_r06 ch_r09 ch_tb11 ch_tb12 ch_tb37 ch_r16 ch_tb85
+train_sbafs.py --accept_sunz_min  80 --accept_sunz_max 89 --accept_time_diff 120 --accept_satz_max 15 --train_dir ~/SBAF_NN/DATA/TRAIN/ --valid_dir ~/SBAF_NN/DATA/VALID/ -o ~/SBAF_NN/ ch_r06 ch_r09 ch_tb11 ch_tb12 ch_tb37 ch_r16 ch_tb85
+train_sbafs.py --accept_sunz_min  80 --accept_sunz_max 89 --accept_time_diff 120 --accept_satz_max 15 --train_dir ~/SBAF_NN/DATA/TRAIN/ --valid_dir ~/SBAF_NN/DATA/VALID/ -o ~/SBAF_NN/ ch_r06 ch_r09 ch_tb11 ch_tb12 ch_tb37 ch_r16
+train_sbafs.py --accept_sunz_min 90 --accept_time_diff 120 --accept_satz_max 15 --train_dir ~/SBAF_NN/DATA/TRAIN/ --valid_dir ~/SBAF_NN/DATA/VALID/ -o ~/SBAF_NN/ ch_tb11 ch_tb12 ch_tb37
+train_sbafs.py --accept_sunz_min 90 --accept_time_diff 120 --accept_satz_max 15 --train_dir ~/SBAF_NN/DATA/TRAIN/ --valid_dir ~/SBAF_NN/DATA/VALID/ -o ~/SBAF_NN/ ch_tb11 ch_tb12 ch_tb37 ch_tb85
+
+
 
 To make images for these:
 -------------------------
@@ -31,4 +42,9 @@ Important stuff:
 -------------------------
 Note for 3.7 VIIRS data is used when there is nodata in AHVRR.
 Note for 3.7 AVHRR colder than 220K the 11-3.7 of VIIRS is used for training (20241104)
-Two types of thinning have been inmplemented 1D (viirs only) and 2D
+Two types of thinning have been inmplemented 1D (viirs only) and 2D (not used)
+
+Network one was trained without thinning using data from 2012 for both training and validation.
+Network two was trained with 1D thinning using data from 2013 for training and from 2012 for validation. Satz up to 25. The 3.7µm nodata replaced with value from VIIRS. 3 layer MLP. Time diff 300.
+Network three was trained with 1D thinning using data from 2013 and 2012 for training and  from 2013 for validation. Satz up to 15. The 3.7µm nodata colder than 220 replaced with value from VIIRS to get VIIRS 11-3.7µm also for AVHRR for this temperatures. 2 layer MPL. Time diff 120s.
+
